--- a/.github/workflows/3.3 deployment sequential job run.yml
+++ b/.github/workflows/3.3 deployment sequential job run.yml
@@ -21,6 +21,9 @@ jobs:
 #first job
   test:
     runs-on: ubuntu-latest
+    defaults:
+        run:
+          working-directory: Task1
     steps:
       - name: Get code
         uses: actions/checkout@v3
