--- a/.github/workflows/3.3 deployment sequential job run.yml
+++ b/.github/workflows/3.3 deployment sequential job run.yml
@@ -42,6 +42,9 @@ jobs:
   deploy: 
     needs: test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Task1
     steps:
       - name: Get code
         uses: actions/checkout@v3
