--- a/.github/workflows/3.3 deployment sequential job run.yml
+++ b/.github/workflows/3.3 deployment sequential job run.yml
@@ -18,7 +18,7 @@ on: [push, workflow_dispatch]
 #allowing subsequent workflow steps to access the codebase
 #Install NodeJS -> https://github.com/actions/setup-node and configure it with specific version
 jobs:
-#first job
+#first job. This job will be run on Task1 directory
   test:
     runs-on: ubuntu-latest
     defaults:
@@ -38,7 +38,8 @@ jobs:
       - name: Show all installed and available packages on ubuntu
         run: apt list
 #second job
-#Add steps: We build this project by running a command and deploy 
+#Add steps: We build this project by running a command and deploy. 
+#This job will be run on Task1 directory
   deploy: 
     needs: test
     runs-on: ubuntu-latest
