--- a/.github/workflows/3.3 Task1 deployment sequential job run.yml
+++ b/.github/workflows/3.3 Task1 deployment sequential job run.yml
@@ -25,7 +25,7 @@ jobs:
         run:
           working-directory: Task1
     steps:
-      - name: Get code
+      - name: Get code from GitHub into a runner machine. It ensures that our code is downloaded onto this runner machine
         uses: actions/checkout@v3
       - name: Install NodeJS 
         uses: actions/setup-node@v3
