--- a/.github/workflows/3.6. Task2 Exercise 2 Issues deployment.yml
+++ b/.github/workflows/3.6. Task2 Exercise 2 Issues deployment.yml
@@ -4,7 +4,7 @@ jobs:
     IssuesEvent:
         runs-on: ubuntu-latest
         steps: 
-            - name: Output GitHub context
-              run: echo "${{ toJSON(github) }}"
+            - name: Output Event Details
+              run: echo "${{ toJSON(github.event) }}"
 
              
